# PydanKit

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.json
.claude/: launch.json  settings.local.json
.claude/skills/setup-agent/: SKILL.md
.github/workflows/: ci.yml
examples/: __init__.py
examples/weather_agent/: README.md  __init__.py  agent.py  api.py  config.py  dependencies.py  main.py  models.py  tools.py
examples/weather_agent/static/: index.html
examples/weather_agent/static/js/: dashboard.js
src/: __init__.py  agent.py  api.py  config.py  db.py  dependencies.py  installer.py  main.py  models.py  tools.py
src/api/: __init__.py  common.py
src/api/routes/: __init__.py  admin.py  auth.py  chat.py  sessions.py  system.py
src/auth/: __init__.py  db.py  dependencies.py  passwords.py  tokens.py
src/memory/: __init__.py  manager.py  models.py  processors.py  sql_storage.py  sqlite_storage.py  storage.py
src/static/: index.html
src/static/js/: dashboard.js
tests/: conftest.py  eval_example.py  test_agent.py  test_api.py  test_auth.py  test_auth_api.py  test_config.py  test_installer.py  test_memory.py  test_memory_sqlite.py  test_processors.py  test_providers.py
