[project]
name = "PydanKit"
version = "0.1.0"
description = "A minimal, well-structured infrastructure template for building AI Agents with Pydantic AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "agent", "pydantic", "llm", "openai", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    # Verified against 2.2.0. The ceiling keeps a future 3.0 from silently
    # breaking a fresh clone; bump it deliberately after re-running the tests.
    "pydantic-ai[openai,logfire]>=2.1,<3.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/peota/PydanKit"
Repository = "https://github.com/peota/PydanKit.git"
Issues = "https://github.com/peota/PydanKit/issues"

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pydantic-evals>=0.1.0",
]

[project.scripts]
agent = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
