[project]
name = "PydanKit"
version = "0.1.0"
description = "A minimal, well-structured infrastructure template for building AI Agents with Pydantic AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "agent", "pydantic", "llm", "anthropic", "openai", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    # The full `pydantic-ai` package bundles every provider SDK (OpenAI, Anthropic,
    # Google, Groq, Mistral, DeepSeek, ...), so any MODEL_NAME works out of the box.
    # Verified against 2.2.0. The ceiling keeps a future 3.0 from silently breaking
    # a fresh clone; bump it deliberately after re-running the tests.
    "pydantic-ai[logfire]>=2.1,<3.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/peota/PydanKit"
Repository = "https://github.com/peota/PydanKit.git"
Issues = "https://github.com/peota/PydanKit/issues"

[project.optional-dependencies]
# Authentication + durable SQLite storage (users, tokens, conversation memory).
# Needed when AUTH_ENABLED=true or memory_storage_type="sqlite", and always by the
# API (api.py imports the auth resolver at load time). Upper bounds keep a future
# major from silently breaking a fresh clone.
auth = [
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.19,<1.0",
    "bcrypt>=4.0,<5.0",
]
# PostgreSQL driver, for DATABASE_URL=postgresql+asyncpg://… (cloud / multi-instance).
# Install alongside [api]: pip install -e ".[api,postgres]"
postgres = [
    "asyncpg>=0.29,<1.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # The API server integrates auth (login/session routes, the resolver dependency),
    # so it pulls in the auth deps even when AUTH_ENABLED is false.
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.19,<1.0",
    "bcrypt>=4.0,<5.0",
]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pydantic-evals>=0.1.0",
]

[project.scripts]
agent = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
